# Carcassonne-Engine

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  devenv.nix  go.mod  go.sum  golangci.yml  make.ps1  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: checks.yml  linter.yml  performance.yml  requests_performance .yml  tests.yml
cmd/main/: Bulding.go  Connection.go  FarmConnection.go  Meeple.go  Player.go  Tile.go  main_test.go
pkg/: tile_test.go
pkg/deck/: deck.go  deck_test.go
pkg/end_tests/: mini_tilesets.go  two_player_game_test.go  utils.go
pkg/engine/: base_structures.go  engine.go  engine_test.go  multi_thread_test.go  requests.go  requests_test.go
pkg/game/: board.go  board_test.go  can_be_placed_test.go  errors.go  errors_test.go  field_test.go  final_scoring_test.go  game.go  game_interface.go  game_interface_test.go  game_test.go  game_test_utils_functions.go  game_test_utils_functions_test.go  mocks.go  placed_tile.go  placed_tile_test.go  player.go  player_test.go  removing_meeples_test.go  scoring_mid_game_test.go  scoring_roads_test.go  tile_placement_test.go
pkg/gametestutilsfunctions/: final_scoring_test.go  game_test_utils_functions.go  game_test_utils_functions_test.go
pkg/logger/: file_logger.go  file_logger_test.go  file_reader.go  log_entries.go  log_reader.go  logger.go  logger_test.go
pkg/player/: player.go  player_test.go
pkg/stack/: tile_stack.go  tile_stack_test.go
pkg/tileSets/: tile_sets.go  (+1 more)
proto/: content.proto  elements.proto  entry.proto
test/: ConnectionTest.go  TileTest.go  main_test.go
(+128 files in other folders)
